14176 Workspace name cosmetic fix
Workspace names were getting cut off without the left-side padding

--- a/src-built-in/components/userPreferences/userPreferences.css
+++ b/src-built-in/components/userPreferences/userPreferences.css
@@ -205,6 +205,7 @@ img {
 .workspace-item > div > .workspace-name {
     width: 250px;
     height: 16px;
+    padding-left: 1px;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
